<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ginanjarmusik.teorimusik.piano.PianoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/pianoToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Mayor Key-->
        <LinearLayout
            android:layout_marginTop="@dimen/margin_top_piano_key"
            android:gravity="center_horizontal|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_c"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/mayor_card_feedback">

                    <TextView
                        android:id="@+id/piano_key_c"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/c"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_d"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_d"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/d"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_e"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_e"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/e"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_f"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_f"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/f"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_g"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_g"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/g"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_a"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_a"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/a"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_b"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_b"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/b"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_width="@dimen/mayor_width"
                android:layout_height="@dimen/mayor_height">

                <RelativeLayout
                    android:id="@+id/piano_c_last"
                    android:background="@drawable/mayor_card_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/piano_key_c_last"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/c"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!--Minor Key-->
        <LinearLayout
            android:gravity="center_horizontal|center"
            android:layout_marginTop="@dimen/margin_top_piano_key"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_marginRight="@dimen/minor_cde_margin_right"
                app:cardElevation="0dp"
                android:layout_width="@dimen/minor_width"
                android:layout_height="@dimen/minor_height"
                android:layout_marginEnd="@dimen/minor_cde_margin_right">

                <RelativeLayout
                    android:id="@+id/minor_Db"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/minor_card_feedback">

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/c_db"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_marginRight="@dimen/minor_ef_margin_right"
                android:layout_width="@dimen/minor_width"
                android:layout_height="@dimen/minor_height"
                android:layout_marginEnd="@dimen/minor_ef_margin_right">

                <RelativeLayout
                    android:id="@+id/minor_Eb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/minor_card_feedback">

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/d_eb"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_marginRight="@dimen/minor_cde_margin_right"
                android:layout_width="@dimen/minor_width"
                android:layout_height="@dimen/minor_height"
                android:layout_marginEnd="@dimen/minor_cde_margin_right">

                <RelativeLayout
                    android:id="@+id/minor_Gb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/minor_card_feedback">

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/f_gb"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardElevation="0dp"
                android:layout_marginRight="@dimen/minor_cde_margin_right"
                android:layout_width="@dimen/minor_width"
                android:layout_height="@dimen/minor_height"
                android:layout_marginEnd="@dimen/minor_cde_margin_right">

                <RelativeLayout
                    android:id="@+id/minor_Ab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/minor_card_feedback">

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/g_ab"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginRight="50dp"
                app:cardElevation="0dp"
                android:layout_width="@dimen/minor_width"
                android:layout_height="@dimen/minor_height">

                <RelativeLayout
                    android:id="@+id/minor_Bb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/minor_card_feedback">

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/a_bb"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="?attr/selectableItemBackground"
                android:id="@+id/img_min"
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_remove_circle_outline_black_24dp"/>

            <ImageView
                android:background="?attr/selectableItemBackground"
                android:id="@+id/img_plus"
                android:layout_margin="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_circle_outline_black_24dp"/>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
